objects/Digital_Message__c.object
<CustomObject>
    <fields>
        <fullName>Digital_Customer__c</fullName>
        <label>Digital Customer</label>
        <referenceTo>Digital_Customer__c</referenceTo>
        <relationshipName>Digital_Messages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Digital_Settings__c</fullName>
        <label>Digital Settings</label>
        <referenceTo>Digital_Settings__c</referenceTo>
        <relationshipName>Digital_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fatal_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to flag which messages are considered to be fatal.  Messages on Opportunities and Proposals that are fatal will cause the Opportunity to be considered as invalid.</description>
        <label>Fatal Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <description>This is a user defined field that is used to manage error message to help resolve timely issues.</description>
        <label>Severity Level</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_1__c</fullName>
        <label>URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_2__c</fullName>
        <label>URL 2</label>
        <type>Url</type>
    </fields>
    <label>Digital Validation Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>URL_1__c</columns>
        <columns>URL_2__c</columns>
        <columns>Email_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Validation Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>